dev.log

> rest-express@1.0.0 dev:client
> vite


> rest-express@1.0.0 dev:server
> NODE_ENV=development tsx server/index.ts


  [32m[1mVITE[22m v6.4.1[39m  [2mready in [0m[1m1090[22m[2m[0m ms[22m

  [32m➜[39m  [1mLocal[22m:   [36mhttp://localhost:[1m5173[22m/[39m
  [32m➜[39m  [1mNetwork[22m: [36mhttp://10.88.0.3:[1m5173[22m/[39m
/home/user/DexAggregator/server/application/services/SwapController.ts:1
import { BigNumber } from 'ethers';
         ^

SyntaxError: The requested module 'ethers' does not provide an export named 'BigNumber'
[90m    at ModuleJob._instantiate (node:internal/modules/esm/module_job:177:21)[39m
[90m    at async ModuleJob.run (node:internal/modules/esm/module_job:260:5)[39m
[90m    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:543:26)[39m
[90m    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:116:5)[39m

Node.js v22.10.0
